--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">AI-INSPIRE</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="edit_description">Edit the details description</string>
-    <string name="hint_reminder">Prompt</string>
-    <string name="size_256">256 by 256</string>
-    <string name="size_512">512 by 512</string>
     <string name="generate">Generate</string>
-    <string name="size_1024">1024 by 1024</string>
+    <string name="prompt_hint">Prompt</string>
+    <string name="error">Error!</string>
+    <string name="enter_description">Edit the detailed description</string>
+    <string name="size_256">256 x 256</string>
+    <string name="size_512">512 x 512</string>
+    <string name="size_1024">1024 x 1024</string>
     <string name="close">Close</string>
     <string name="download">Download</string>
+    <string name="enter_prompt">Prompt Cant\'t Be Empty</string>
 </resources>
